--- a/src/Hacka.Api/Hacka.Api.csproj
+++ b/src/Hacka.Api/Hacka.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Hacka.Domain\Hacka.Domain.csproj" />
     <ProjectReference Include="..\Hacka.Zabbix\Hacka.Zabbix.csproj" />
   </ItemGroup>
 
