--- a/src/Hacka.Api/Hacka.Api.csproj
+++ b/src/Hacka.Api/Hacka.Api.csproj
@@ -7,11 +7,14 @@
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Hacka.Domain\Hacka.Domain.csproj" />
+    <ProjectReference Include="..\Hacka.Infra\Hacka.Infra.csproj" />
     <ProjectReference Include="..\Hacka.Zabbix\Hacka.Zabbix.csproj" />
   </ItemGroup>
 
