Add backgroud serve

--- a/src/Hacka.Api/appsettings.json
+++ b/src/Hacka.Api/appsettings.json
@@ -6,7 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "UserZabbix": "U003703",
-  "PassZabbix": "!Dev04052020!"
+  "AllowedHosts": "*"
 }
