--- a/src/Hacka.Infra/Hacka.Infra.csproj
+++ b/src/Hacka.Infra/Hacka.Infra.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Flurl.Http" Version="3.0.1" />
+    <PackageReference Include="Zabbix.API.Core" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
